fix(ocuupation): wrong wrapping

--- a/widgets/occupation/occupation.scss
+++ b/widgets/occupation/occupation.scss
@@ -19,8 +19,8 @@
             z-index: 10;
             margin-left: 5px;
             width: 70%;
+            height: 32px;
             overflow: hidden;
-            white-space: nowrap;
             text-overflow: ellipsis;
             text-align: left;
 
